--- a/Tugas.css
+++ b/Tugas.css
@@ -70,6 +70,10 @@
   #profil {
     background-image: url(senja.jpg);
     border: #055296;
+font-family: 'Times New Roman', Times, serif;
+background-color: #ffffff;
+
+
     
     
   }
